# polaris

./: .gitignore  .ocamlformat  Cargo.toml  Readme.md  default.nix  dune-project  install.pls  install.pol  install.sh  polaris.opam  release.nix  shell.nix  test.script
athena/: athena.ml  athena.mli  dune  loc.ml  loc.mli  stream.ml  stream.mli
athena_test/: athena_test.ml  dune
containers/: dune  vector.ml
doc/: Spec.md
lib/: args.pls  args.pol  ast.ml  async.pls  bytecode.ml  driver.ml  dune  eval.ml  lexer.mll  list.pls  list.pol  parser.mly  pipe.ml  primops.ml  random.pls  random.pol  rename.ml  util.ml
lib/bytecode/: compile.ml  compile.mli
polarislsp/: diagnostic.ml  diagnostic.mli  driver.ml  driver.mli  dune  jsonrpc.ml  jsonrpc.mli  jsonutil.ml  jsonutil.mli  lsp.ml  main.ml  model.ml  model.mli  trace.ml  trace.mli
readline/: dune  readline.ml  readline_stub.c
src/: argparse.ml  ast.ml  ast.rs  bytecode.ml  classes.ml  config.ml  config.mli  cowbuffer.ml  cowbuffer.mli  difflist.ml  difflist.mli  disambiguate.ml  disambiguate.mli  driver.ml  driver.mli  dune  error.ml  error.mli  errormessage.ml  errormessage.mli  eval.ml  eval.mli  eval.rs  evidence.ml  evidence.mli  lexer.ml  lexer.mli  lexer.mll  loc.ml  loc.mli  main.rs  modules.ml  modules.mli  multimap.ml  multimap.mli  oniguruma_wrapper.ml  parser.ml  parser.mly  parserprelude.ml  parserutil.ml  (+31 more)
src/bytecode/: compile.ml  compile.mli
src/closurewrapper/: main.rs
std/: async.pls  list.pls
test/: dune  run.pls  runner.pls  runner.pol
test/categories/async/: all.pls  all.pls.disabled  async1.pls  await_remaining.pls  forConcurrent.pls  forConcurrent.pls.disabled  sync.pls  sync_once.pls  try_abort.pls  try_waits.pls  update.pls
test/categories/classes/: ambiguous.error  ambiguous.pls  app_return_class_poly.pls  constraint.pls  constraint_no_instance.error  constraint_no_instance.pls  definition.pls  eq_list.pls  existantialize_constraint.pls  generalize_constraint.pls  import_instance.pls  import_instance_base.pls.skip  instance.pls  instance_context_missing.pls  instance_entailed.pls  instance_entailed_missing.error  instance_entailed_missing.pls  instance_generic.pls  instance_multi_var_different.error  instance_multi_var_different.pls  instance_skolem_body.pls  instance_triple_misshapen.error  instance_triple_misshapen.pls  instance_var_multi.pls  instance_var_multi_mismatch.error  instance_var_multi_mismatch.pls  instance_var_recursive.pls  instance_var_tuple.pls  invalid.error  invalid.pls  let_poly_pattern_class.pls  let_poly_pattern_class_check.pls  let_poly_pattern_class_check_supertype.pls  missing.error  missing.pls  misspelled.error  misspelled.pls
test/categories/env-vars/: lexical_scope.pls  lookup.pls  set_lookup.pls  set_progcall.pls
test/categories/exceptions/: command_failure.error  command_failure.pls  command_failure_catch.pls  command_failure_pipe_expr_statement.pls  command_failure_pipe_expr_value.pls  command_failure_stdout.pls  handled.pls  handled_as.pls  handler_mismatched_patterns  handler_mismatched_patterns.error  handler_mismatched_patterns.pls  imported.error  imported.pls  imported_base.pls.ignored  match.pls  match_var.pls  no_params.pls  reraised.error  reraised.pls  unhandled.error  unhandled.pls
test/categories/flags/: named.pls  varargs.pls
test/syntax/: nested_let.pol
trees_that_grow/: dune  trees_that_grow.ml
(+220 files in other folders)
