(library
 (name polaris)
 (libraries
  menhirLib
  trees_that_grow
  bestline
  re
  eio
  eio.unix
  base
  sedlex
  landmarks)
 (preprocess
  (pps trees_that_grow sedlex.ppx))
 (instrumentation
  (backend landmarks --auto)))

(menhir
 (modules parser))

(rule
 (target closurewrapper.exe)
 (deps closurewrapper/main.rs)
 (action
  (chdir
   closurewrapper
   (run rustc main.rs -o "../closurewrapper.exe"))))

(rule
 (target closurewrapper.ml)
 (deps closurewrapper.exe)
 (action
  (run ocaml-embed-file closurewrapper.exe -output closurewrapper)))

(env
 (dev
  (flags
   (:standard -warn-error -A -w -27 -w -23 -w -33 -w -30 -warn-error +8))))

(include_subdirs unqualified)
