(library
 (name polaris)
 (libraries
  menhirLib
  bestline
  re
  eio
  eio.unix
  base
  sedlex
  landmarks)
 (preprocess
  (pps trees_that_grow sedlex.ppx))
 (instrumentation
  (backend landmarks --auto)))

(menhir
 (modules parser))

(rule
 (target std_wrapper.ml)
 (deps (glob_files ../std/*.pls))
 (action
  (progn
    (echo ocaml-embed-file %{deps} -with-alist -output std_wrapper)
    (run ocaml-embed-file %{deps} -with-alist -output std_wrapper))))

(env
 (dev
  (flags
   (:standard -warn-error -A -w -27 -w -23 -w -33 -w -30 -warn-error +8))))

(include_subdirs unqualified)
